Board screen now correct - but still a little behind in updating sometimes. Shows winner. Will work on more later

--- a/src/index.css
+++ b/src/index.css
@@ -55,4 +55,5 @@ h1 {
   font-size: 20px;
   background-color: lightblue;
   margin: 10px;
+  line-height: 50px;
 }
